k8s/Kong/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
spec:
  rules:
    - http:
        paths:
          - path: /producer
            pathType: ImplementationSpecific
            backend:
              service:
                name: rabbitmq-producer-service
                port:
                  number: 80
